[gd_scene load_steps=8 format=3 uid="uid://dgvloukq3otmr"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_ey7l3"]
[ext_resource type="Texture2D" uid="uid://b0snwi6l7gbxo" path="res://main_menu/sample.jpg" id="1_l2wqk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pu08p"]
texture = ExtResource("1_l2wqk")
modulate_color = Color(0.488805, 0.488695, 0.406631, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekgwc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sax8c"]
bg_color = Color(0.666569, 0.666569, 0.666569, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y17vm"]
bg_color = Color(0.466181, 0.466181, 0.466181, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sn6uv"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ey7l3")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_pu08p")

[node name="GameTitle" type="Label" parent="."]
layout_mode = 2
offset_left = 500.0
offset_top = 162.0
offset_right = 780.0
offset_bottom = 250.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 64
text = "G.C.A.T"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = 1.0
offset_right = 115.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="NewGame" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekgwc")
theme_override_styles/hover = SubResource("StyleBoxFlat_sax8c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y17vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_sn6uv")
text = "New Game"

[node name="Continue" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekgwc")
theme_override_styles/hover = SubResource("StyleBoxFlat_sax8c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y17vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_sn6uv")
text = "Continue"

[node name="Settings" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekgwc")
theme_override_styles/hover = SubResource("StyleBoxFlat_sax8c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y17vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_sn6uv")
text = "Settings"

[node name="QuitGame" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekgwc")
theme_override_styles/hover = SubResource("StyleBoxFlat_sax8c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y17vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_sn6uv")
text = "Quit Game"

[connection signal="pressed" from="ButtonContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="ButtonContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ButtonContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonContainer/QuitGame" to="." method="_on_quit_game_pressed"]
